Small fix, forgot to add powermining.use to the powermining.* permission node.

--- a/plugin.yml
+++ b/plugin.yml
@@ -9,6 +9,7 @@ permissions:
         description: Grants all permissions
         children:
             powermining.craft: true
+            powermining.use: true
     powermining.craft:
         description: Allows players to craft the Hammer and Excavator tools
         default: true
